--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,43 @@
+# Define the version of the Compose file format
 # version: "3.9"
 
 services:
+  # Define the app service
   app:
     build:
       context: .
       args:
         - DEV=true
     ports:
-      - "8000:8000"
+      - "8000:8000" # Map port 8000 on the host to port 8000 in the container
     volumes:
-      - ./app:/app
+      - ./app:/app # Mount the app directory from the host to the container
+      - dev-static-data:/vol/web # Mount the dev-static-data volume to /vol/web in the container
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+             python manage.py runserver 0.0.0.0:8000"  # Run the Django development server
     environment:
-      - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASSWORD=changeme
+      - DB_HOST=db # Set the database host environment variable
+      - DB_NAME=devdb # Set the database name environment variable
+      - DB_USER=devuser # Set the database user environment variable
+      - DB_PASSWORD=changeme # Set the database password environment variable
     depends_on:
-      - db
-  
-  db:
-    image: postgres:13-alpine
-    environment:
-      POSTGRES_DB: devdb
-      POSTGRES_USER: devuser
-      POSTGRES_PASSWORD: changeme
-    ports:
-      - "5432:5432"
-    volumes:
-      - dev-db-data:/var/lib/postgresql/data
+      - db # Ensure the db service is started before the app service
 
+  # Define the db service
+  db:
+    image: postgres:13-alpine # Use the official PostgreSQL image
+    environment:
+      POSTGRES_DB: devdb # Set the PostgreSQL database name
+      POSTGRES_USER: devuser # Set the PostgreSQL user
+      POSTGRES_PASSWORD: changeme # Set the PostgreSQL password
+    ports:
+      - "5432:5432" # Map port 5432 on the host to port 5432 in the container
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data # Mount the dev-db-data volume to /var/lib/postgresql/data in the container
+
+# Define the named volumes
 volumes:
-  dev-db-data:
+  dev-db-data: # Volume for PostgreSQL data
+  dev-static-data: # Volume for static data
