--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
       - DB_HOST=db # Set the database host environment variable
       - DB_NAME=devdb # Set the database name environment variable
       - DB_USER=devuser # Set the database user environment variable
-      - DB_PASSWORD=changeme # Set the database password environment variable
+      - DB_PASS=changeme # Set the database password environment variable
+      - DEBUG=1 # Enable Django debug mode
     depends_on:
       - db # Ensure the db service is started before the app service
 
